# preview-pdf

./: AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix
.agents/skills/bench/: SKILL.md
.agents/skills/command/: SKILL.md
.agents/skills/documentation/: SKILL.md
.agents/skills/extension/: SKILL.md
.agents/skills/palette/: SKILL.md
.agents/skills/pr-workflow/: SKILL.md
.agents/skills/pvf-command/: SKILL.md
.agents/skills/pvf-extension/: SKILL.md
.agents/skills/pvf-palette/: SKILL.md
.agents/skills/rust-crate-path-locator/: SKILL.md
.agents/skills/testing/: SKILL.md
.github/workflows/: artifacts.yml  ci.yml  release.yml
benches/: perf.rs
benches/fixtures/: common.typ  generate-high-res-image.py  high-res-image.typ  text.typ
docs/: README.md  architecture.md  async-workers.md  command-system.md  configuration.md  extension-system.md  overview.md  palette-provider.md  performance-audit-2026-03-25.md  performance-diagnostics.md  reference.md  rendering-pipeline.md  runtime-spec.md  testing.md
src/: cache.rs  cli.rs  condition.rs  config.rs  error.rs  event.rs  lib.rs  main.rs  metrics.rs  perf.rs  perf_report.rs  work.rs
src/app/: actors.rs  constants.rs  core.rs  event_bus.rs  event_loop.rs  frame_ops.rs  input_ops.rs  loop_driver.rs  loop_effects.rs  loop_router.rs  loop_runtime.rs  mod.rs  nav.rs  perf_runner.rs  render_ops.rs  runtime.rs  scale.rs  state.rs  terminal_session.rs  view_ops.rs
src/app/runtime/: mod.rs  prepare.rs  spread_canvas.rs
src/app/tests/: config_init.rs  mod.rs  runtime_worker.rs  terminal_surface.rs
src/app/view_ops/: mod.rs  spread.rs  tests.rs  viewer_outcome.rs
src/backend/: hayro.rs  mod.rs  test_support.rs  traits.rs
src/backend/hayro/: document.rs  encoding.rs  mod.rs  outline.rs  text.rs
src/command/: catalog.rs  core.rs  dispatch.rs  effects.rs  handlers.rs  mod.rs  parse.rs  spec.rs  types.rs
src/command/handlers/: control.rs  debug.rs  help.rs  history.rs  layout.rs  (+7 more)
src/config/: file.rs  keymap.rs  mod.rs  options.rs  policy.rs  types.rs
src/extension/: events.rs  host.rs  input.rs  mod.rs  traits.rs
src/highlight/: geometry.rs  mod.rs
src/history/: mod.rs  palette.rs  state.rs
src/input/: handler.rs  history.rs  keymap.rs  mod.rs  sequence.rs  shortcut.rs
src/outline/: mod.rs  palette.rs  state.rs
src/palette/: candidate.rs  effect.rs  kind.rs  manager.rs  matcher.rs  mod.rs  provider.rs  registry.rs  request.rs  row.rs  session_controller.rs  text.rs  types.rs  view.rs
src/perf/: driver.rs  mod.rs  summary.rs  tests.rs
src/presenter/: encode.rs  factory.rs  image_ops.rs  l2_cache.rs  mod.rs  ratatui.rs  terminal_cell.rs  traits.rs
src/render/: cache.rs  mod.rs  prefetch.rs  scheduler.rs  worker.rs
src/search/: engine.rs  matcher.rs  mod.rs  palette.rs  state.rs  worker.rs
src/ui/: chrome.rs  help.rs  layout.rs  mod.rs  overlay.rs  theme.rs
(+21 files in other folders)
