[package]
name = "preview-pdf"
version = "0.1.0"
edition = "2024"
default-run = "pvf"

[lib]
name = "pvf"

[[bin]]
name = "pvf"
path = "src/main.rs"

[dependencies]
bytemuck = { version = "1.25.0", features = ["extern_crate_alloc"] }
hayro = "0.5.0"
kurbo = "0.12.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
clap = { version = "4.5.49", features = ["derive"] }
ratatui = "0.30.0"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
tui-input = "0.11.1"
image = "0.25.9"
fast_image_resize = "6.0.0"
lru = "0.16.3"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
flume = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
thiserror = "2.0.17"
futures-util = "0.3.31"
unicode-width = "0.2.0"
unicode-segmentation = "1.12.0"
