[package]
name = "preview-pdf"
version = "0.2.0"
edition = "2024"
description = "pvf is a keyboard-first PDF viewer for the terminal."
license = "MIT"
repository = "https://github.com/shiguri-01/preview-pdf"
readme = "README.md"
keywords = ["pdf", "terminal", "tui", "viewer", "cli"]
categories = ["command-line-utilities"]
exclude = ["/.agents", "/.github", "/.envrc", "/flake.lock", "/flake.nix"]
default-run = "pvf"

[lib]
name = "pvf"

[[bin]]
name = "pvf"
path = "src/main.rs"

[[bench]]
name = "perf"
harness = false

[dependencies]
bytemuck = { version = "1.25.0", features = ["extern_crate_alloc"] }
hayro = "0.7.1"
kurbo = "0.13.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
clap = { version = "4.5.49", features = ["derive"] }
ratatui = "0.30.0"
ratatui-image = { version = "11.0.4", default-features = false, features = ["crossterm"] }
tui-input = "0.15.3"
image = "0.25.9"
fast_image_resize = "6.0.0"
lru = "0.18.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
flume = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "1.1.2"
thiserror = "2.0.17"
futures-util = "0.3.31"
unicode-width = "0.2.2"
unicode-segmentation = "1.12.0"
